Fix T54580: Pointer buttons skip undo push